re PR c++/42059 ([c++0x] ICE with initializer list for VLA)

PR c++/42059
	* typeck.c (cp_build_modify_expr): For initializer list call
	check_array_initializer to make sure lhs isn't a VLA.

	* g++.dg/cpp0x/initlist26.C: New test.

From-SVN: r154237