gcc/testsuite/g++.dg/cpp0x/initlist26.C
@@ -1,0 +1,10 @@
+// PR c++/42059
+// { dg-do compile }
+// { dg-options "-std=gnu++0x" }
+
+void
+foo (int i)
+{
+  int a[i];
+  a = { }; // { dg-error "may not be initialized" }
+}
